--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "react-router-dom": "^6.17.0",
     "sequelize": "^6.33.0",
