--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^6.17.0",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
+    "sharp": "^0.32.6",
     "sweetalert2": "^11.7.32",
     "sweetalert2-react-content": "^5.0.7"
   }
